Adjust left margin of links in socialFooter to prevent overlap with comment count when shrinking page

--- a/content/themes/wd-theme/assets/styles/screen-lg.css
+++ b/content/themes/wd-theme/assets/styles/screen-lg.css
@@ -243,5 +243,5 @@ Width: 48em and up
 }
 
 .socialFooter-links > * + * {
-    margin-left: 12px;
+    margin-left: 3px;
 }
